Linking admin.html to admin.css

--- a/public/admin.html
+++ b/public/admin.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Admin Panel</title>
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
   <h2>Admin View</h2>
@@ -56,4 +57,5 @@
     document.body.insertBefore(clearButton, logList);
   </script>
 </body>
+
 </html>
